--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "uoss",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "上传文件到阿里云oss",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node index.js dev",
-    "online": "node index.js online"
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:dctxf/uoss.git"
   },
   "keywords": [
     "node",
