--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "上传文件到阿里云oss",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test/index.js"
   },
   "repository": {
     "type": "git",
@@ -16,7 +16,7 @@
     "upload"
   ],
   "author": "dctxf",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "ali-oss": "^4.8.0",
     "co": "^4.6.0"
